# Copyright (C) 2017 Chris Liebert

[package]
name = "frustum_query"
version = "0.1.2"
authors = ["Chris Liebert", "Mark Morley (derived works, see http://www.racer.nl/reference/vfc_markmorley.htm)"]
keywords = ["3D", "graphics"]
description = "A frustum culling framework for 3D graphics applications."
include = [
	"src/*.rs",
	"Cargo.toml",
]
readme = "README.md"
repository = "https://github.com/chrisliebert/frustum_query.git"
license-file = "LICENSE"
documentation = "https://chrisliebert.github.io/frustum_query"
homepage = "https://github.com/chrisliebert/frustum_query"
license = "MIT"

[lib]
name = "frustum_query"
path = "src/lib.rs"
doc = true
crate-type = ["rlib"]

[features]
default = []
multithreaded_rayon = ["rayon", "time"]

[dependencies]
rayon = { version = "0.6.0", optional = true}
time = { version = "0.1.35", optional = true}
